# dexjoco

./: .gitignore  .gitmodules  README.md  README_draft.md  assets_manifest.json  environment-dexjoco.yaml
dexjoco/: pyproject.toml
dexjoco-data-converter/: README.md  environment-dc.yaml  example.bash  hatch_build.py  install.bash  pyproject.toml
dexjoco-data-converter/configs/configs_22/datasets_v2/: datasets_path.yaml
dexjoco-data-converter/configs/configs_22/randomize_datasets/: datasets_path.yaml
dexjoco-data-converter/configs/configs_46/datasets_v2/: datasets_path.yaml  selected_data.yaml  selected_data_rename.yaml  slice_config.yaml
dexjoco-data-converter/configs/configs_46/randomize_data_scale500/: datasets_path.yaml  language_instructions.yaml  selected_data.yaml  slice_config.yaml
dexjoco-data-converter/configs/configs_46/randomize_datasets/: datasets_path.yaml
dexjoco-data-converter/configs/configs_59/datasets_v2/: datasets_path.yaml
dexjoco-data-converter/configs/configs_59/randomize_datasets/: datasets_path.yaml
dexjoco-data-converter/configs/dexjoco/ipad_reasoning/: dataset_paths.yaml  language_instructions.yaml  selected_data.yaml  slice_config.yaml
dexjoco-data-converter/configs/dexjoco/rand_full/: selected_data.yaml
dexjoco-data-converter/configs/dexjoco/rand_obj/: dataset_paths.yaml
dexjoco-data-converter/configs/multi_task/: selected_data.yaml
dexjoco-data-converter/configs/rand_full/: dataset_paths.yaml  selected_data.yaml  slice_config.yaml
dexjoco-data-converter/configs/rand_obj/: language_instructions.yaml  selected_data.yaml
dexjoco-data-converter/scripts/: check_dataset_consistency.py  check_dexjoco_dataset_consistency.py  check_dexjoco_dataset_zeros.py  check_lerobot_datasets.py  check_random_camera.py  merge_all_data_lerobot.py  merge_all_data_zarr.py  print_dexjoco_dataset_structure.py  print_episode_structure.py  process_dp_dataset.py  process_dp_datasets.py  process_ipad_reasoning_lerobot_dataset.py  process_lerobot_dataset.py  process_lerobot_datasets.py  rename_random_camera.py
dexjoco-data-converter/src/dexjoco_data_converter/: __init__.py  cli.py  episode_common.py  process_protocol.py  utils.py
dexjoco-data-converter/src/dexjoco_data_converter/to_lerobot/: __init__.py  batch_merge_episode_lerobot.py  ipad_reasoning_merge_episode_lerobot.py  merge_datasets_lerobot.py  merge_episode_lerobot.py
dexjoco-data-converter/src/dexjoco_data_converter/to_zarr/: __init__.py  batch_merge_episode_zarr.py  merge_datasets_zarr.py  merge_episode_zarr.py
dexjoco-data-converter/src/diffusion_policy/: __init__.py
dexjoco/dexjoco/tasks/: config.py
dexjoco/dexjoco/tasks/click_mouse/: config.py
dexjoco/dexjoco_openpi_client/: __init__.py  dexhand_bench_env.py  dexjoco_openpi_env.py  eval_dexjoco_openpi.py  evaluate_DexJoCo_ipad.py  evaluate_dexhand_bench.py  ipad_env.py
dexjoco/dexjoco_openpi_client/cli/: __init__.py  evaluate.py
(+83 files in other folders)
