[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dexjoco", "dexjoco_openpi_client"]

[project]
name = "dexjoco"
version = "0.0.1"
description = "A Unified Benchmark and Toolkit for Task-Oriented Dexterous Manipulation on MuJoCo"
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = "MIT"
authors = [
    { name = "Hanwen Wang", email = "wanghanwen2025@ia.ac.cn" },
    { name = "Xiangyu Wang", email = "wangxiangyu2025@ia.ac.cn" },
    { name = "Weizhi Zhao", email = "zhaoweizhi2025@ia.ac.cn" },
]
keywords = ["embodied AI", "benchmark", "toolkit"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "absl-py",
    "av",
    "dm-robotics-transformations",
    "glfw",
    "gymnasium==1.0.0",
    "mujoco==3.4.0",
    "numcodecs",
    "numpy==1.26.4",
    "scipy",
    "zarr<3",
    "opencv-python",
    "tqdm",
    "imageio[ffmpeg]",
    "pyyaml",
    "tyro"
]

[project.scripts]
dexjoco-openpi-eval = "dexjoco_openpi_client.cli.evaluate:main"

[project.urls]
Homepage = "https://dexjoco.github.io"
